sorted data into 3 month interval buckets

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -21,8 +21,8 @@
    "id": "8cfadb6a1097cfee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-01T18:32:46.511728Z",
-     "start_time": "2024-12-01T18:32:46.424502Z"
+     "end_time": "2024-12-08T19:38:29.961810Z",
+     "start_time": "2024-12-08T19:38:29.899751Z"
     }
    },
    "source": [
@@ -255,12 +255,12 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -273,8 +273,8 @@
    "id": "81323aeaef7399f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-01T18:38:10.900068Z",
-     "start_time": "2024-12-01T18:38:10.721866Z"
+     "end_time": "2024-12-08T19:38:30.173498Z",
+     "start_time": "2024-12-08T19:38:29.996254Z"
     }
    },
    "source": [
@@ -308,15 +308,276 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "862a8d863bf490f",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-08T19:38:30.239607Z",
+     "start_time": "2024-12-08T19:38:30.208548Z"
+    }
+   },
+   "source": [
+    "\n",
+    "df.sort_values(by='Date', inplace=True)\n",
+    "df['Bucket'] = df['Date'].dt.to_period('Q')\n",
+    "df.set_index(['Bucket', 'Date'], inplace=True)\n",
+    "df"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                       open      high     middle       low     close  \\\n",
+       "Bucket Date                                                            \n",
+       "2019Q3 2019-09-01   9930.13   9930.13   9930.130   9930.13   9930.13   \n",
+       "       2019-09-01   9637.93   9665.05   8830.750   7996.45   8519.67   \n",
+       "       2019-09-01   8528.12   8724.77   8486.275   8247.78   8435.28   \n",
+       "       2019-09-01   8434.45   8453.20   8107.535   7761.87   8064.41   \n",
+       "       2019-09-01   8078.75   8259.96   8059.270   7858.58   8178.73   \n",
+       "...                     ...       ...        ...       ...       ...   \n",
+       "2024Q4 2024-10-01  60974.39  62318.65  61159.325  60000.00  60630.70   \n",
+       "       2024-10-01  63292.04  64077.58  62296.750  60515.92  60999.49   \n",
+       "       2024-10-01  72645.72  72910.61  72175.660  71440.71  72475.12   \n",
+       "       2024-10-01  66111.08  67754.48  66302.955  64851.43  67050.80   \n",
+       "       2024-10-01  72472.22  72643.28  71221.640  69800.00  70395.71   \n",
+       "\n",
+       "                       volume  count   Covid  year  month  \n",
+       "Bucket Date                                                \n",
+       "2019Q3 2019-09-01    0.001000      1  before  2019      9  \n",
+       "       2019-09-01  202.350799   2345  before  2019      9  \n",
+       "       2019-09-01   55.417971    763  before  2019      9  \n",
+       "       2019-09-01   41.880079   1023  before  2019      9  \n",
+       "       2019-09-01   47.142904    990  before  2019      9  \n",
+       "...                       ...    ...     ...   ...    ...  \n",
+       "2024Q4 2024-10-01   25.062640   4956   after  2024     10  \n",
+       "       2024-10-01   48.543060   6164   after  2024     10  \n",
+       "       2024-10-01   32.534860   4538   after  2024     10  \n",
+       "       2024-10-01   38.566130   7059   after  2024     10  \n",
+       "       2024-10-01   28.095720   2912   after  2024     10  \n",
+       "\n",
+       "[1865 rows x 10 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>middle</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>count</th>\n",
+       "      <th>Covid</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bucket</th>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2019Q3</th>\n",
+       "      <th>2019-09-01</th>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>9930.130</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>9930.13</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>before</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-01</th>\n",
+       "      <td>9637.93</td>\n",
+       "      <td>9665.05</td>\n",
+       "      <td>8830.750</td>\n",
+       "      <td>7996.45</td>\n",
+       "      <td>8519.67</td>\n",
+       "      <td>202.350799</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>before</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-01</th>\n",
+       "      <td>8528.12</td>\n",
+       "      <td>8724.77</td>\n",
+       "      <td>8486.275</td>\n",
+       "      <td>8247.78</td>\n",
+       "      <td>8435.28</td>\n",
+       "      <td>55.417971</td>\n",
+       "      <td>763</td>\n",
+       "      <td>before</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-01</th>\n",
+       "      <td>8434.45</td>\n",
+       "      <td>8453.20</td>\n",
+       "      <td>8107.535</td>\n",
+       "      <td>7761.87</td>\n",
+       "      <td>8064.41</td>\n",
+       "      <td>41.880079</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>before</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-09-01</th>\n",
+       "      <td>8078.75</td>\n",
+       "      <td>8259.96</td>\n",
+       "      <td>8059.270</td>\n",
+       "      <td>7858.58</td>\n",
+       "      <td>8178.73</td>\n",
+       "      <td>47.142904</td>\n",
+       "      <td>990</td>\n",
+       "      <td>before</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2024Q4</th>\n",
+       "      <th>2024-10-01</th>\n",
+       "      <td>60974.39</td>\n",
+       "      <td>62318.65</td>\n",
+       "      <td>61159.325</td>\n",
+       "      <td>60000.00</td>\n",
+       "      <td>60630.70</td>\n",
+       "      <td>25.062640</td>\n",
+       "      <td>4956</td>\n",
+       "      <td>after</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-01</th>\n",
+       "      <td>63292.04</td>\n",
+       "      <td>64077.58</td>\n",
+       "      <td>62296.750</td>\n",
+       "      <td>60515.92</td>\n",
+       "      <td>60999.49</td>\n",
+       "      <td>48.543060</td>\n",
+       "      <td>6164</td>\n",
+       "      <td>after</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-01</th>\n",
+       "      <td>72645.72</td>\n",
+       "      <td>72910.61</td>\n",
+       "      <td>72175.660</td>\n",
+       "      <td>71440.71</td>\n",
+       "      <td>72475.12</td>\n",
+       "      <td>32.534860</td>\n",
+       "      <td>4538</td>\n",
+       "      <td>after</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-01</th>\n",
+       "      <td>66111.08</td>\n",
+       "      <td>67754.48</td>\n",
+       "      <td>66302.955</td>\n",
+       "      <td>64851.43</td>\n",
+       "      <td>67050.80</td>\n",
+       "      <td>38.566130</td>\n",
+       "      <td>7059</td>\n",
+       "      <td>after</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-10-01</th>\n",
+       "      <td>72472.22</td>\n",
+       "      <td>72643.28</td>\n",
+       "      <td>71221.640</td>\n",
+       "      <td>69800.00</td>\n",
+       "      <td>70395.71</td>\n",
+       "      <td>28.095720</td>\n",
+       "      <td>2912</td>\n",
+       "      <td>after</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1865 rows × 10 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-08T19:38:30.338107Z",
+     "start_time": "2024-12-08T19:38:30.335489Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "1f4d5764cb6119bb",
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
